# QEES

./: README.md  ros2papernotesqees
lab1/: calculation_transport_time.cpp
lab1.1/install/: local_setup.sh  setup.sh
lab1.1/log/: latest_build
lab1.1/src/artificial_load/: CMakeLists.txt
lab1.2/evaluation/ack_time/: ack_time_128Kbyte.txt  ack_time_16Kbyte.txt  ack_time_1Kbyte.txt  ack_time_1Mbyte.txt  ack_time_256Kbyte.txt  ack_time_256byte.txt  ack_time_2Kbyte.txt  ack_time_2Mbyte.txt  ack_time_32Kbyte.txt  ack_time_4Kbyte.txt  ack_time_4Mbyte.txt  ack_time_512Kbyte.txt  ack_time_512byte.txt  ack_time_64Kbyte.txt  ack_time_8Kbyte.txt
lab1.2/evaluation/publish_time/: publish_time_128Kbyte.txt  (+14 more)
lab1.2/install/: local_setup.sh  setup.sh
lab1.2/log/: latest_build
lab1.3/: calculate
lab1.3/install/: local_setup.sh  setup.sh
lab1.3/log/: latest_build
lab1.4/: params.yaml
lab1.4/evaluation/: summary_statistics.csv
lab1.4/install/: local_setup.sh  setup.sh
lab1.4/log/: latest_build
lab1/log/: latest_build
lab1/src/interprocess_eval/: CMakeLists.txt
lab1/src/interprocess_eval/src/: listener_interprocess.cpp  talker_interprocess_single.cpp
lab3/: run.bash  run2.bash  stop.bash
lab3/install/: local_setup.sh  setup.sh
lab3/log/: latest_build
scripts/: calculate_times.py  plot_times.py
scripts/L1Q6/: boxplot_times.py  plot_stats.py  plot_times.py  plot_variance.py
scripts/L1Q7/: calculate_times.py  plot_result.py  plot_time_grid.py  plot_times.py
scripts/L1Q8/: calculate_pipeline.py  plot_avg_pipeline.py  plot_ping_pong.py  plot_pipeline.py
(+587 files in other folders)
